[package]
name = "axon_parseast_parser"
version = "0.4.1"
authors = ["A Mackay <opensauceburner@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/a-mackay/axon_parseast_parser"
documentation = "https://docs.rs/axon_parseast_parser"
homepage = "https://github.com/a-mackay/axon_parseast_parser"
description = """
A library to parse the output of SkySpark's parseAst function.
"""
edition = "2018"
keywords = ["skyspark"]

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
chrono = "0.4"
lalrpop-util = "0.19.1"
raystack_core = "0.1"
regex = "1"